--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <title>jQuery</title>
 </head>
 <body>
-
+    <h1 class="big-tittle">Hello.</h1>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button> 
+    <input type="text">
+    <a href="https://www.google.com">Googgle</a>
+    <img src="image.pn" alt="">
 
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
